RESOLVED FIXED137908
CSS Rule features are ignored for nested CSS Selector lists
https://bugs.webkit.org/show_bug.cgi?id=137908
Summary CSS Rule features are ignored for nested CSS Selector lists
Benjamin Poulain
Reported 2014-10-20 20:14:13 PDT
CSS Rule features are ignored for nested CSS Selector lists
Attachments
Patch (50.99 KB, patch)
2014-10-20 20:19 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-10-20 20:19:04 PDT
Andreas Kling
Comment 2 2014-10-21 12:12:49 PDT
Comment on attachment 240179 [details] Patch Great find! r=me
Benjamin Poulain
Comment 3 2014-10-21 20:28:25 PDT
Comment on attachment 240179 [details] Patch Clearing flags on attachment: 240179 Committed r175018: <http://trac.webkit.org/changeset/175018>
Benjamin Poulain
Comment 4 2014-10-21 20:28:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.